--- a/index.html
+++ b/index.html
@@ -156,14 +156,10 @@
             </div>
             <div class="info-item">
                 <span class="info-label">Bahasa:</span><br>
-                <div class="language-item">
-                    <span class="language-name">Indonesia</span>
-                    <span>(Ibu/Bahasa Utama)</span>
-                </div>
-                <div class="language-item">
-                    <span class="language-name">Inggris</span>
-                    <span>(Bicara: Cukup, Tulis: Baik)</span>
-                </div>
+                <ul class="language-list">
+                    <li>Indonesia (Ibu/Bahasa Utama)</li>
+                    <li>Inggris (Bicara: Cukup, Tulis: Baik)</li>
+                </ul>
             </div>
         </div>
     </div>
