--- a/index.html
+++ b/index.html
@@ -120,10 +120,9 @@
             color: #555;
         }
         .language-item {
-            display: flex;
-            justify-content: space-between;
-            align-items: flex-start;
-            gap: 10px
+            display: grid;
+            grid-template-columns: auto;
+            gap: 0px
             max-width: 350px;
             margin-bottom: 10px;
         }
