--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                 </div>
                 <div class="language-item">
                     <span class="language-name">Inggris</span>
-                    <span>(Bicara: Cukup, Tulis: Baik</span>
+                    <span>(Bicara: Cukup, Tulis: Baik)</span>
                 </div>
             </div>
         </div>
