--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                 <h4>Spesialisasi Kesehatan Masyarakat</h4>
                 <ul>
                     <li>Konvergensi Pencegahan Stunting</li>
-                    <li>Penguatan Kader Pembangunan Manusia</li>
+                    <li>Penguatan Kader</li>
                     <li>Desain & Implementasi Program Kesehatan Berbasis Masyarakat</li>
                 </ul>
             </div>
